fixed login box clipping issue

--- a/quote-influx/src/components/NavBar.module.css
+++ b/quote-influx/src/components/NavBar.module.css
@@ -1,8 +1,10 @@
 #header {
     display: flex;
     justify-content: space-between;
-    margin: 0 1rem;
+    /* margin: 0 1rem; */
+    padding: 0 1rem;
     flex-wrap: wrap;
+    /* background-color: white; */
 }
 
 #logo {
